--- a/src/FuGu/FuGu.html
+++ b/src/FuGu/FuGu.html
@@ -5,40 +5,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>FuGu</title>
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,700,700italic|Playfair+Display:400,700&subset=latin,cyrillic">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.css">
+  
     <link rel="stylesheet" href="styles">
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="tm-left-right-container">
-                <!-- Left column: logo and menu -->
-                <div class="tm-blue-bg tm-left-column">                        
-                    <div class="tm-logo-div text-xs-center">
-                        <img src="images/tm-neaty-logo.png" alt="Logo">
-                        <h1 class="tm-site-name">FuGu</h1>
-                    </div>
-                    <nav class="tm-main-nav">
-                        <ul class="tm-main-nav-ul">
-                            <li class="tm-nav-item">
-                                <a href="" class="tm-nav-item-link">Программы</a>
-                            </li>
-                            <li class="tm-nav-item">
-                                <a href="" class="tm-nav-item-link">Игры</a>
-                            </li>
-                            <li class="tm-nav-item">
-                                <a href="" class="tm-nav-item-link">Шляпы</a>
-                            </li>
-                        </ul>
-                    </nav>                                         
-                </div> <!-- Left column: logo and menu -->
     <header> 
+        <div class="container">
+            <div class="flex-menu">
+                <div class="flex-block">
+                    <a href="" class="tm-nav-item-link">Главная</a>
+                </div>
+                <div class="flex-block">
+                    <a href="" class="tm-nav-item-link">Заглавная</a>
+                </div>
+                <div class="flex-block">
+                    <a href="" class="tm-nav-item-link">Второстепенная</a>
+                </div>
+                <div class="flex-block">
+                    <a href="" class="tm-nav-item-link">Контакты</a>
+                </div>
+            </div>
+        </div>   
     </header>
 
     <main> 
-            
+        <!-- Left column: logo and menu -->
+        <div class="tm-blue-bg tm-left-column">                        
+            <div class="tm-logo-div text-xs-center">
+                <img src="images/FG.png" alt="Logo">
+                <h1 class="tm-site-name">FuGu</h1>
+            </div>
+            <nav class="tm-main-nav">
+                <ul class="tm-main-nav-ul">
+                    <li class="tm-nav-item">
+                        <a href="" class="tm-nav-item-link">Программы</a>
+                    </li>
+                    <li class="tm-nav-item">
+                        <a href="" class="tm-nav-item-link">Игры</a>
+                    </li>
+                    <li class="tm-nav-item">
+                        <a href="" class="tm-nav-item-link">Шляпы</a>
+                    </li>
+                </ul>
+            </nav>                                         
+        </div> <!-- Left column: logo and menu -->
+        <div class="text">
+    
+        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>        
+        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+
+        </div>
     </main>
 
     <footer>
+        <div class="footer-col"><span>All rights reserved <br>Powered by Olchik</span></div>
+            <div class="footer-col">
+                <div class="social-bar-wrap">
+                    <a title="Facebook" href="" target="_blank"><i class="fa fa-facebook"></i></a>
+                    <a title="Twitter" href="" target="_blank"><i class="fa fa-twitter"></i></a>
+                    <a title="Pinterest" href="" target="_blank"><i class="fa fa-pinterest"></i></a>
+                    <a title="Instagram" href="" target="_blank"><i class="fa fa-instagram"></i></a>
+                </div>
+            </div>      
     </footer>
 
 </body>
