--- a/src/FuGu/FuGu.html
+++ b/src/FuGu/FuGu.html
@@ -13,6 +13,10 @@
 <body>
     <header> 
         <div class="container">
+            <div class="logo">                        
+                <img src="images/FG.png" alt="Logo">
+                <h1 class="logo__name">FuGu</h1>
+            </div>
             <div class="flex-menu">
                 <div class="flex-block">
                     <a href="" class="tm-nav-item-link">Главная</a>
@@ -32,24 +36,30 @@
 
     <main> 
         <!-- Left column: logo and menu -->
-        <div class="tm-blue-bg tm-left-column">                        
-            <div class="tm-logo-div text-xs-center">
-                <img src="images/FG.png" alt="Logo">
-                <h1 class="tm-site-name">FuGu</h1>
-            </div>
-            <nav class="tm-main-nav">
-                <ul class="tm-main-nav-ul">
-                    <li class="tm-nav-item">
-                        <a href="" class="tm-nav-item-link">Программы</a>
-                    </li>
-                    <li class="tm-nav-item">
-                        <a href="" class="tm-nav-item-link">Игры</a>
-                    </li>
-                    <li class="tm-nav-item">
-                        <a href="" class="tm-nav-item-link">Шляпы</a>
-                    </li>
-                </ul>
-            </nav>                                         
+        
+        <ul class="nav_list">
+            <li><a href="#">Программы</a>
+                <ul>
+                    <li><a href="#">Программа 1</a></li>
+                    <li><a href="#">Программа 2</a></li>
+                    <li><a href="#">Программа 3</a></li>
+                </ul>	
+            </li>
+            <li><a href="#">Игры</a>
+                <ul>
+                    <li><a href="#">Игра 1</a></li>
+                    <li><a href="#">Игра 2</a></li>
+                    <li><a href="#">Игра 3</a></li>
+                </ul>	
+            </li>
+            <li><a href="#">Шляпы</a>
+                <ul>
+                    <li><a href="#">Шляпа 1</a></li>
+                    <li><a href="#">Шляпа 2</a></li>
+                    <li><a href="#">Шляпа 3</a></li>
+                </ul>		
+            </li>
+        </ul>
         </div> <!-- Left column: logo and menu -->
         <div class="text">
     
